# anchor

./: .coveragerc  .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTORS.txt  Dockerfile  LICENSE  README.rst  local.yml  manage.py  production.yml  pyproject.toml  pytest.ini  setup.cfg
.envs/.local/: .postgres
anchor/: exceptions.py
anchor/common/: debug.py  exceptions.py  helpers.py  html.py  middleware.py  views.py
anchor/contrib/sites/migrations/: 0001_initial.py  0003_set_site_domain_and_name.py
anchor/pypi/: apps.py  models.py  service.py  services.py  urls.py  views.py
anchor/pypi/migrations/: 0001_initial.py  0002_auto_20190505_1509.py  0002_auto_20190524_1447.py
anchor/pypi/templates/: files.html  projects.html  pypi-base.html
anchor/static/css/: project.css
anchor/templates/: base.html
anchor/templates/account/: account_inactive.html  base-sign.html  base.html  email.html  email_confirm.html  login-old.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  signup.html  signup_closed.html  verification_sent.html  verified_email_required.html
anchor/templates/users/: login.html  user_detail.html  user_form.html  user_list.html
anchor/users/: admin.py  apps.py  auth.py  models.py  urls.py  views.py
anchor/users/migrations/: 0001_initial.py  0002_grouprole_role_userrole.py
ciconia/: conftest.py
ciconia/common/: decorators.py  helpers.py  middleware.py  views.py
ciconia/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
ciconia/pypi/: admin.py  apps.py  models.py  service.py  urls.py  views.py
ciconia/pypi/migrations/: 0001_initial.py  0002_pythonpackage_summary.py  0003_auto_20190505_0006.py  0003_auto_20190505_1802.py
ciconia/pypi/templates/: files.html  packages.html  pypi-base.html  versions.html
ciconia/pypi/tests/: test_pypi.py
ciconia/pypi/views/: __init__.py  simple.py  xmlrpc.py
ciconia/templates/: base.html
ciconia/users/: admin.py  apps.py  models.py  urls.py
ciconia/users/migrations/: 0001_initial.py  0002_auto_20190509_1014.py
ciconia/users/tests/: test_forms.py  test_views.py
compose/production/traefik/: traefik.toml
config/: urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docker/: Dockerfile
docs/: API.rst  Makefile  conf.py  index.rst  make.bat  packaging.rst  python.rst  retentions.rst
docs/dev/: frontend.rst  middleware.rst  packaging.rst  python.rst
requirements/: local.txt
tests/: __init__.py  conftest.py  test_common.py  test_formatters.py  test_middleware.py  test_packages.py  test_pypi.py  test_retentions.py
