[tool.poetry]
name = "ciconia"
version = "0.1.0"
description = "Repository for python, debian and other packages with one REST API to rule them all."
authors = ["Igor Ovsyannikov <kamish@outlook.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2"
django-environ = "^0.4.5"
django-crispy-forms = "^1.7"
djangorestframework = "^3.9"
django-debug-toolbar = "^1.11"
django-extensions = "^2.1"

[tool.poetry.dev-dependencies]
pylint = "^2.3"
pytest = "^4.4"
pytest-django = "^3.4"
pytest-sugar = "^0.9.2"
mypy = "^0.701.0"
click = "^7.0"
pylint-django = "^2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
