[tool.poetry]
name = "anchor"
version = "0.2.0"
description = "Package repository manager built for CI/CD environments."
authors = ["Igor Ovsyannikov <kamish@outlook.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2"
django-environ = "^0.4.5"
django-crispy-forms = "^1.7"
django-debug-toolbar = "^1.11"
django-extensions = "^2.1"
# disabled temporarily because requires compiler
# argon2 = {version = "^0.1.10",extras = ["django"]}
# argon2-cffi = "^19.1"
stdlib-list = "^0.5.0"
packaging = "^19.0"
django-guardian = "^1.5"
django-allauth = "^0.39.1"
humanize = "^0.5.1"

[tool.poetry.dev-dependencies]
pylint = "^2.3"
pytest = "^4.4"
pytest-django = "^3.4"
mypy = "^0.711.0"
click = "^7.0"
pylint-django = "^2.0"
rope = "^0.14.0"
pytest-cov = "^2.7"
django-coverage-plugin = "^1.6"
sphinx_rtd_theme = "^0.4.3"
pytest-sugar = "^0.9.2"
beautifulsoup4 = "^4.7"
pytest-benchmark = "^3.2"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
